# phish

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  app.manifest  build.rs  post-build.bat
.cargo/: config.toml
src/: lib.rs  main.rs
tools/: build.sh
