[package]
name = "phish"
version = "0.2.0"
edition = "2021"
license = "MIT"

[profile.release]
strip = true  # Automatically strip symbols from the binary. You can't use cargo bloat with this enabled, though.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

# custom profile for cargo-bloat
[profile.bloat]
inherits = "release"
debug = true # Helps to identify functions by name
strip = false  # Necessary to run cargo-bloat

[profile.dev]
# This isn't required for development builds, but makes development
# build behavior match release builds. To enable unwinding panics
# during development, simply remove this line.
panic = "abort"

[dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation", # for `MessageBoxW` and `GetLastError`
    "Win32_System_Threading", # for `ExitProcess`
    "Win32_UI_WindowsAndMessaging", # for MessageBox API
] }
