[package]
name = "phish"
version = "0.2.7"
edition = "2021"
license = "MIT"
categories = ["no-std::no-alloc", "rust-patterns"]
repository = "https://github.com/zkxs/phish"

[profile.release]
strip = true  # Automatically strip symbols from the binary. You can't use cargo bloat with this enabled, though.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

# custom release-optimized profile with debug symbols for cargo-bloat and other binary analysis tools, like cargo-show-asm
[profile.optimized-debug]
inherits = "release"
debug = true # Helps to identify functions by name
strip = false  # Necessary to run cargo-bloat

[profile.dev]
# This isn't required for development builds, but makes development
# build behavior match release builds. To enable unwinding panics
# during development, simply remove this line.
panic = "abort"

[dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation", # for `MessageBoxW`
    "Win32_UI_WindowsAndMessaging", # for MessageBox API
] }
